--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,6 @@
+# Debugging mode to log more about what's going on
+debug: true
+
 # Redis messenger settings
 redis:
   host: localhost
@@ -38,4 +41,4 @@ lang:
   cant-drop-items: "&cDu kannst erst Items droppen wenn deine Spielerdaten geladen sind!"
   cant-move: "&cDu kannst dich erst bewegen wenn deine Spielerdaten geladen sind!"
   wait-for-loading: "&cBitte warte bis deine Spielerdaten geladen sind!"
-  cant-load-data: "&cTut uns leid aber der Server konnte nicht deine aktuellen Daten laden. Kontaktiere die Serverleitung wenn dies öfter passieren sollte!"
+  cant-load-data: "&cTut uns leid aber der Server konnte nicht deine aktuellen Daten nicht laden.\nKontaktiere die Serverleitung wenn dies öfter passieren sollte!"
