--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.12</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.lishid</groupId>
             <artifactId>openinvplugincore</artifactId>
             <version>3.1.1-SNAPSHOT</version>
