Add option to store data even for unknown players (Fixes #3) This will try to create player data for players that haven't joined before and store the synced data in there. In order to not have to rely on nms this is done by copying an empty player.dat file and letting OpenInv load that. This will create a player with the default values which will then be overwritten by the data saving. The only downside is that this breaks first join functions that use OfflinePlayer#hasPlayedBefore as that checks whether or not player data exists.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,6 +27,11 @@ server-name: server1 # CHANGE THIS!
 # to not always be online.
 sync-with-group-on-logout: true
 
+# Store player data even if the player never joined the server
+# This will create a player.dat when the data is synced and most likely
+# breaks first join detection of other plugins
+store-unknown-players: true
+
 # The amount of seconds we should maximally wait for all servers to
 # respond to a query
 query-timeout: 5
