Add config option to sync effects as apparently they might get stuck :S

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -48,6 +48,9 @@ query-timeout: 5
 # It will basically disable the required-servers function
 apply-timed-out-queries: false
 
+# Should the plugin try to sync player effects?
+sync-effects: false
+
 # Should the plugin try to keep maps in sync?
 sync-maps: true
 
