--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,6 +12,16 @@ commands:
       usage: /<command> [reload]
       permission: SyncInv.command
       permission-message: You don't have the permission <permission>
+   openinv:
+      aliases: [oi, inv, open]
+      description: Open a player's inventory
+      permission: SyncInv.openinv
+      usage: /<command> <player> - Open a player's inventory
+   openender:
+      aliases: [oe]
+      description: Opens the enderchest of a player
+      permission: SyncInv.openender
+      usage: /<command> <player> - Open a player's enderchest
 permissions:
    syncinv.command:
       description: Gives permission to the plugin command
