--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         </repository>
         <repository>
             <id>minebench-repo</id>
-            <url>http://repo.minebench.de/</url>
+            <url>https://repo.minebench.de/</url>
         </repository>
     </repositories>
 
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.lishid</groupId>
             <artifactId>openinvplugincore</artifactId>
-            <version>4.0.9-SNAPSHOT</version>
+            <version>4.1.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
