--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -51,6 +51,9 @@ apply-timed-out-queries: false
 # Should the plugin try to sync player effects?
 sync-effects: false
 
+# Should the plugin try to sync persistent nbt data on the player object?
+sync-persistent-data: true
+
 # Should the plugin try to keep maps in sync?
 sync-maps: true
 
