Fix issues with unknown player storage
- Fixes save errors due to no world in the empty.dat file
- Fix error due to missing playerdata folder
- Directly use empty.dat from the jar file to simplify updating it and don't clutter plugin folder

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -38,6 +38,10 @@ sync-with-group-on-logout: true
 # breaks first join detection of other plugins
 store-unknown-players: true
 
+# Whether to create a missing 'world' world which is required
+# for unknown player storage to work
+create-world: true
+
 # The amount of seconds we should maximally wait for all servers to
 # respond to a query
 query-timeout: 5
