--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -100,9 +100,9 @@ sync:
 
 # Language settings
 lang:
-  cant-pickup-exp: "&cYou can only collect EXP once your player data is loaded!"
-  cant-pickup-items: "&cYou can only collect items once your player data is loaded!"
-  cant-drop-items: "&cYou can only drop items once your player data is loaded!"
-  cant-move: "&cYou can only move once your player data is loaded!"
-  wait-for-loading: "&cPlease wait until your player data is loaded!"
-  cant-load-data: "&cSorry but the server wasn't able to load your latest player data.\nPlease contact an administrator if this happens often!"
+  cant-pickup-exp: "<red>You can only collect EXP once your player data is loaded!</red>"
+  cant-pickup-items: "<red>You can only collect items once your player data is loaded!</red>"
+  cant-drop-items: "<red>You can only drop items once your player data is loaded!</red>"
+  cant-move: "<red>You can only move once your player data is loaded!</red>"
+  wait-for-loading: "<red>Please wait until your player data is loaded!</red>"
+  cant-load-data: "<red>Sorry but the server wasn't able to load your latest player data.<newline>Please contact an administrator if this happens often!</red>"
